--- a/gs/man/ps2pdf.1
+++ b/gs/man/ps2pdf.1
@@ -1,5 +1,5 @@
 
-.TH PS2PDF 1 "16 August 1998" 5.30 "Ghostscript Tools" \" -*- nroff -*-
+.TH PS2PDF 1 "10 September 1998" 5.40 "Ghostscript Tools" \" -*- nroff -*-
 .SH NAME
 ps2pdf \- Ghostscript PostScript to PDF translator
 .SH SYNOPSIS
@@ -23,11 +23,11 @@ fourteen built-in PDF fonts, it converts all fonts in the PostScript file
 to bitmap fonts in the PDF file, and scrambles the character codes so that
 the output is not searchable.  (Normally it produces 720dpi bitmaps, but
 you can change this using Ghostscript's \fB\-r\fR option.)  We intend to
-mostly fix this some time in 1998.
+mostly fix this by the end of 1998.
 .SH FILES
 Run "\fBgs -h\fR" to find the location of Ghostscript documentation on your
 system, from which you can get more details.
 .SH VERSION
-This document was last revised for Ghostscript version 5.30.
+This document was last revised for Ghostscript version 5.40.
 .SH AUTHOR
 L. Peter Deutsch <ghost@aladdin.com>
