--- a/gs/man/gs.1
+++ b/gs/man/gs.1
@@ -1,5 +1,5 @@
 .\" $RCSfile$ $Revision$
-.TH GS 1 "12 November 1999" 5.96 Ghostscript \" -*- nroff -*-
+.TH GS 1 "3 February 2000" 6.0 Ghostscript \" -*- nroff -*-
 .SH NAME
 gs \- Ghostscript (PostScript and PDF language interpreter and previewer)
 .SH SYNOPSIS
@@ -211,6 +211,9 @@ legal>8.5>14>21.59>35.56
 11x17>11>17>27.94>43.18
 ledger>17>11>43.18>27.94
 .TE
+.PP
+Note that the B paper sizes are ISO sizes: for information about using
+JIS B sizes, see \fBUse.htm\fR.
 .PP
 Ghostscript can do many things other than print or view PostScript and
 PDF files.  For example, if you want to know the bounding box of a
@@ -454,7 +457,7 @@ The various Ghostscript document files (above), especially \fBUse.htm\fR.
 .SH BUGS
 See the Usenet news group comp.lang.postscript.
 .SH VERSION
-This document was last revised for Ghostscript version 5.96.
+This document was last revised for Ghostscript version 6.0.
 .SH AUTHOR
 L. Peter Deutsch <ghost@aladdin.com> is the principal author of Ghostscript.
 Russell J. Lang <rjl@aladdin.com> is the author of most of the MS Windows
