--- a/gs/man/dvipdf.1
+++ b/gs/man/dvipdf.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH DVIPDF 1 "3 February 2000" 6.0 Ghostscript \" -*- nroff -*-
 .SH NAME
 dvipdf \- Convert TeX DVI file to PDF using ghostscript and dvips
