--- a/gs/man/font2c.1
+++ b/gs/man/font2c.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH FONT2C 1 "3 February 2000" 6.0 Ghostscript \" -*- nroff -*-
 .SH NAME
 font2c \- Write PostScript Type 0 or Type 1 font as C code
