--- a/gs/man/gslp.1
+++ b/gs/man/gslp.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH GSLP 1 "3 February 2000" 6.0 Ghostscript \" -*- nroff -*-
 .SH NAME
 gslp \- Format and print text using ghostscript
