--- a/gs/man/gsnd.1
+++ b/gs/man/gsnd.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH GSND 1 "3 February 2000" 6.0 Ghostscript \" -*- nroff -*-
 .SH NAME
 gsnd \- Run ghostscript (PostScript and PDF engine) without display
