--- a/gs/man/pf2afm.1
+++ b/gs/man/pf2afm.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH PF2AFM 1 "3 February 2000" 6.0 Ghostscript \" -*- nroff -*-
 .SH NAME
 pf2afm \- Make an AFM file from Postscript (PFB/PFA/PFM) font files using ghostscript
