--- a/gs/man/pfbtopfa.1
+++ b/gs/man/pfbtopfa.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH PFBTOPFA 1 "3 February 2000" 6.0 Ghostscript \" -*- nroff -*-
 .SH NAME
 pfbtopfa \- Convert Postscript .pfb fonts to .pfa format using ghostscript
