--- a/gs/man/printafm.1
+++ b/gs/man/printafm.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH PRINTAFM 1 "3 February 2000" 6.0 Ghostscript \" -*- nroff -*-
 .SH NAME
 printafm \- Print the metrics from a Postscript font in AFM format using ghostscript
