--- a/gs/man/wftopfa.1
+++ b/gs/man/wftopfa.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH WFTOPFA 1 "3 February 2000" 6.0 Ghostscript \" -*- nroff -*-
 .SH NAME
 wftopfa \- Convert a Wadalab base font to Postscript .PFA (or .PFB)
