Update to 6.50 release.
git-svn-id: http://svn.ghostscript.com/ghostpcl/trunk/ghostpcl@1242 06663e23-700e-0410-b217-a244a6096597

--- a/gs/man/ansi2knr.1
+++ b/gs/man/ansi2knr.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH ANSI2KNR 1 "8 March 2000" \" -*- nroff -*-
 .SH NAME
 ansi2knr \- convert ANSI C to Kernighan & Ritchie C
