--- a/gs/man/eps2eps.1
+++ b/gs/man/eps2eps.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $RCSfile$ $Revision$
 .TH PS2PS 1 "21 February 2000" 6.01 "Ghostscript Tools" \" -*- nroff -*-
 .SH NAME
 eps2eps \- Ghostscript Encapsulated PostScript "distiller"
