--- a/gs/man/ps2ps.1
+++ b/gs/man/ps2ps.1
@@ -1,5 +1,5 @@
-.\" $Id$
-.TH PS2PS 1 "21 February 2000" 6.01 "Ghostscript Tools" \" -*- nroff -*-
+.\" $RCSfile$ $Revision$
+.TH PS2PS 1 "2 December 2000" 6.50 "Ghostscript Tools" \" -*- nroff -*-
 .SH NAME
 ps2ps \- Ghostscript PostScript "distiller"
 .SH SYNOPSIS
@@ -17,6 +17,6 @@ Encapsulated PostScript (EPS) files, use \fBeps2eps\fR.
 Run "\fBgs -h\fR" to find the location of Ghostscript documentation on your
 system, from which you can get more details.
 .SH VERSION
-This document was last revised for Ghostscript version 6.01.
+This document was last revised for Ghostscript version 6.50.
 .SH AUTHOR
 L. Peter Deutsch <ghost@aladdin.com>
