--- a/gs/man/pdf2dsc.1
+++ b/gs/man/pdf2dsc.1
@@ -1,5 +1,5 @@
-.\" $Id$
-.TH PDF2DSC 1 "3 February 2000" 6.0 "Ghostscript Tools" \" -*- nroff -*-
+.\" $RCSfile$ $Revision$
+.TH PDF2DSC 1 "2 December 2000" 6.50 "Ghostscript Tools" \" -*- nroff -*-
 .SH NAME
 pdf2dsc \- generate a PostScript page list of a PDF document
 .SH SYNOPSIS
@@ -29,6 +29,6 @@ Ghostscript since release 3.53.
 .SH SEE ALSO
 gs(1), ghostview(1)
 .SH VERSION
-This document was last revised for Ghostscript version 6.0.
+This document was last revised for Ghostscript version 6.50.
 .SH AUTHOR
 Yves Arrouye <yves.arrouye@usa.net> and Russell Lang <rjl@aladdin.com>
