--- a/gs/man/ps2epsi.1
+++ b/gs/man/ps2epsi.1
@@ -1,5 +1,5 @@
-.\" $Id$
-.TH PS2EPSI 1 "3 February 2000" 6.0 "Ghostscript Tools" \" -*- nroff -*-
+.\" $RCSfile$ $Revision$
+.TH PS2EPSI 1 "2 December 2000" 6.50 "Ghostscript Tools" \" -*- nroff -*-
 .SH NAME
 ps2epsi \- generate conforming Encapsulated PostScript
 .SH SYNOPSIS
@@ -60,7 +60,7 @@ ps2epsi.ps>the Ghostscript program which does the work
 .SH SEE ALSO
 gs (1)
 .SH VERSION
-This document was last revised for Ghostscript version 6.0.
+This document was last revised for Ghostscript version 6.50.
 However, the content may be obsolete, or inconsistent with ps2epsi.txt.
 .SH AUTHOR
 George Cameron
