--- a/gs/man/ps2pdf.1
+++ b/gs/man/ps2pdf.1
@@ -1,5 +1,5 @@
-.\" $Id$
-.TH PS2PDF 1 "12 February 2000" 6.01 Ghostscript \" -*- nroff -*-
+.\" $RCSfile$ $Revision$
+.TH PS2PDF 1 "2 December 2000" 6.50 Ghostscript \" -*- nroff -*-
 .SH NAME
 ps2pdf \- Convert PostScript to PDF using ghostscript
 .br
@@ -7,11 +7,11 @@ ps2pdf12 \- Convert PostScript to PDF\ 1.2 (Acrobat\ 3-and-later compatible) usi
 .br
 ps2pdf13 \- Convert PostScript to PDF\ 1.3 (Acrobat\ 4-and-later compatible) using ghostscript
 .SH SYNOPSIS
-\fBps2pdf\fR  [options...] (input.ps|-) [output.pdf|-]
+\fBps2pdf\fR  [options...] (input.[e]ps|-) [output.pdf|-]
 .br
-\fBps2pdf12\fR  [options...] (input.ps|-) [output.pdf|-]
+\fBps2pdf12\fR  [options...] (input.[e]ps|-) [output.pdf|-]
 .br
-\fBps2pdf13\fR  [options...] (input.ps|-) [output.pdf|-]
+\fBps2pdf13\fR  [options...] (input.[e]ps|-) [output.pdf|-]
 .SH DESCRIPTION
 The
 .B ps2pdf
@@ -46,10 +46,9 @@ gs(1), ps2pdfwr(1),
 .br
 Ps2pdf.htm in the Ghostscript documentation
 .SH VERSION
-This document was last revised for Ghostscript version 6.01.
+This document was last revised for Ghostscript version 6.50.
 .SH AUTHOR
 L. Peter Deutsch <ghost@aladdin.com> is the principal author of Ghostscript.
 Russell J. Lang <rjl@aladdin.com> is the author of most of the MS Windows
 code in Ghostscript.
 This manpage by George Ferguson.
-
