updates readme for quick build instructions.
git-svn-id: http://svn.ghostscript.com/ghostpcl/trunk/ghostpcl@1421 06663e23-700e-0410-b217-a244a6096597

--- a/README
+++ b/README
@@ -1,2 +1,13 @@
 Ghostscript PCL5e, PCL5c and PXL documentation is in doc/index.htm
 License is in Public.htm
+
+We encourage you to read the documentation and licence information but
+the software can be quickly built and installed on many unix systems
+by executing these commands.
+
+make
+make test
+make install
+
+`make test' will run the pcl6 interpreter with the X11 device in
+interactive mode.  You must press return after each page is displayed.
