--- a/gs/doc/Readme
+++ b/gs/doc/Readme
@@ -1,4 +1,4 @@
-                          Overview of Ghostscript6.50
+Overview of Ghostscript
 
 If this is your first contact with Ghostscript, before continuing here you
 should read the documentation for new users, where you'll find
@@ -24,8 +24,8 @@ Table of contents
 
         * Document roadmap by theme
              o What should I read if I'm a new user?
-                  + AFPL Ghostscript and GNU Ghostscript
-                  + Before building Ghostscript
+             o AFPL Ghostscript and GNU Ghostscript
+             o Before building Ghostscript
              o What should I read if I'm not a new user?
              o What if I'm a developer?
              o What if I'm writing documentation?
@@ -52,10 +52,11 @@ Table of contents
 
              o Primarily for developers:
 
-                    C-style.htm     Lib.htm        Source.htm
-                    DLL.htm         Maintain.htm   Xfonts.htm
-                    Drivers.htm     Projects.htm
-                    Htmstyle.htm    Release.htm
+                    API.htm        Htmstyle.htm   Ps-style.htm
+                    C-style.htm    Issues.htm     Release.htm
+                    DLL.htm        Lib.htm        Source.htm
+                    Develop.htm    Maintain.htm   Xfonts.htm
+                    Drivers.htm    Projects.htm
 
   ------------------------------------------------------------------------
 
@@ -77,7 +78,7 @@ for new users, then as many of these documents as seem useful:
      about
    * more detailed information about how to use Ghostscript under Unix with
      lpr as a filter for non-PostScript printers
-   * information about reporting problems -- but remember that Ghostscript
+   * information about reporting problems--but remember that Ghostscript
      comes with NO WARRANTY and NO SUPPORT
 
 AFPL Ghostscript and GNU Ghostscript
@@ -96,7 +97,8 @@ extensively, you should at least skim, and probably eventually read:
      replace fonts
    * a description of the Ghostscript language, and its differences from the
      documented PostScript language
-   * about the .ps files distributed with Ghostscript (other than fonts)
+   * about the postscript files distributed with Ghostscript (other than
+     fonts)
 
 Before building Ghostscript
 
@@ -124,6 +126,12 @@ should begin by reading this file, then
 
 What if I'm a developer?
 
+If you are going to do any development on or with Ghostscript at all, you
+should at least look at
+
+   * the roadmap documentation for Ghostscript's source files and
+     architecture
+
 If you are going to write a new driver for Ghostscript, you should read
 
    * the guide to the Ghostscript source code
@@ -139,12 +147,13 @@ license carefully, and you should also read
      can be distributed with a commercial product
 
 If you intend to use Ghostscript in the form of a dynamic link library (DLL)
-under OS/2 or Microsoft Windows, read
+under OS/2 or Microsoft Windows or in the form of shared object under Linux,
+read
 
-   * documentation on Ghostscript as a DLL
+   * documentation on Ghostscript Interpreter API
 
-If you want to use Ghostscript as part of another program -- as a callable
-PostScript language interpreter -- and not as a DLL or as a self-contained
+If you want to use Ghostscript as part of another program--as a callable
+PostScript language interpreter--and not as a DLL or as a self-contained
 executable application, you should begin by reading
 
    * the source file imain.h, the documented API for Ghostscript not as a
@@ -187,9 +196,9 @@ Adobe makes a wealth of technical documentation available over the Web,
 including the PostScript Language Reference Manual (Third Edition); the
 Encapsulated PostScript (EPS) Format Specification version 3, including
 Encapsulated PostScript Interchange (EPSI) format; the PDF 1.3
-specification; and the pdfmark and Acrobat Distiller parameters
-documentation. Some of these documents are also available at Adobe's ftp
-site, but not necessarily under the same filenames.
+specification; and the pdfmark, transparency and Acrobat Distiller
+parameters documentation. Some of these documents are also available at
+Adobe's ftp site, but not necessarily under the same filenames.
 
 Other material on the WWW
 
@@ -204,7 +213,7 @@ German (and soon in Japanese), at:
 
 There is a translation of the Ghostscript 'man' pages into Czech at:
 
-     http://www.volny.cz/rebus/ghostscript
+     http://www.volny.cz/rebus/ghostscript/
 
   ------------------------------------------------------------------------
 
@@ -213,13 +222,18 @@ Which document contains what?
 Here is the list in alphabetic order of Ghostscript documentation, with
 explanations of the contents.
 
+API.htm
+     On MS-Windows and OS/2, Ghostscript is compiled as a dynamic link
+     library (DLL). On Linux, Ghostscript can be compiled as a shared
+     object. This describes how to use it. For developers.
+
 Bug-form.htm
-     A form to fill out and a-meil to report a problem with AFPL Ghostscript
-     -- but remember that Ghostscript comes with NO WARRANTY and NO SUPPORT.
-     Please read the instructions before reporting a bug.
+     A form to fill out and email to report a problem with AFPL
+     Ghostscript--but remember that Ghostscript comes with NO WARRANTY and
+     NO SUPPORT. Please read the instructions before reporting a bug.
 
 Bug-info.htm
-     Information about how to report problems with AFPL Ghostscript -- but
+     Information about how to report problems with AFPL Ghostscript--but
      remember that Ghostscript comes with NO WARRANTY and NO SUPPORT. Please
      read this before reporting a problem.
 
@@ -248,7 +262,12 @@ Current.htm
 DLL.htm
      On OS/2, MS Windows-16 and MS Windows-32 platforms, Ghostscript is
      compiled as a dynamic link library (DLL). This describes how to use it.
-     For developers.
+     For developers. This DLL interface is obsolete. Use API.htm instead.
+
+Develop.htm
+     Code orientation for developers. Contains a detailed breakdown of the
+     source files by functional group, and overviews of the major
+     architectural features and services.
 
 Devices.htm
      Detailed information about some specific devices for which Ghostscript
@@ -295,6 +314,11 @@ Humor.htm
 Install.htm
      How to install Ghostscript. See also how to build it.
 
+Issues.htm
+     A list of outstanding open issues in Ghostscript. These include known
+     limitations, minor bugs, performance issues, differences from Adobe
+     implementations, and others.
+
 Language.htm
      The relationship between the Ghostscript interpreter and the PostScript
      language as defined by Adobe.
@@ -326,6 +350,13 @@ News.htm
 Projects.htm
      A list of Ghostscript development projects with which we would like
      help.
+
+Ps-style.htm
+     The guidelines and style for postscript coding in Ghostscript. Some of
+     Ghostscript is implemented in the postscript language itself, and
+     various utilities and examples are distributed with it. You should
+     follow these guidelines if you're extending or modifying those files.
+     For developers.
 
 Ps2epsi.htm
      Detailed information on how to use Ghostscript through ps2epsi to
@@ -382,4 +413,4 @@ This file is part of AFPL Ghostscript. See the Aladdin Free Public License
 (the "License") for full details of the terms of using, copying, modifying,
 and redistributing AFPL Ghostscript.
 
-Ghostscript version 6.32, 27 November 2000
+Ghostscript version 6.64, 7 April 2001
