--- a/gs/man/eps2eps.1
+++ b/gs/man/eps2eps.1
@@ -1,22 +1,24 @@
 .\" $RCSfile$ $Revision$
-.TH PS2PS 1 "21 February 2000" 6.01 "Ghostscript Tools" \" -*- nroff -*-
+.TH PS2PS 1 "31 December 2000" 6.60 "Ghostscript Tools" \" -*- nroff -*-
 .SH NAME
-eps2eps \- Ghostscript Encapsulated PostScript "distiller"
+ps2ps, eps2eps \- Ghostscript PostScript "distiller"
 .SH SYNOPSIS
+\fBps2ps\fR [ \fIoptions\fR ] \fIinput.ps output.ps\fR
+.br
 \fBeps2eps\fR [ \fIoptions\fR ] \fIinput.eps output.eps\fR
 .SH DESCRIPTION
-\fBeps2eps\fR uses \fIgs\fR(1) to convert Encapsulated \fBPostScript\fR(tm)
-file "input.eps" to simpler and (usually) faster Encapsulated PostScript in
-"output.eps".  Normally the output is allowed to use PostScript Level 2
+\fBps2ps\fR uses \fIgs\fR(1) to convert \fBPostScript\fR(tm) file
+"input.ps" to simpler and (usually) faster PostScript in
+"output.ps".  Normally the output is allowed to use PostScript Level 2
 constructs, but the \fB\-dLanguageLevel=1\fR option restricts the output to
 Level 1.
 .PP
-Use \fBeps2eps\fR only for Encapsulated PostScript (EPS) files; for
-ordinary PostScript (PS) files, use \fBps2ps\fR.
+\fBeps2eps\fR performs the equivalent optimization for Encapsulated
+PostScript (EPS) files. 
 .SH FILES
 Run "\fBgs -h\fR" to find the location of Ghostscript documentation on your
 system, from which you can get more details.
 .SH VERSION
-This document was last revised for Ghostscript version 6.01.
+This document was last revised for Ghostscript version 6.60.
 .SH AUTHOR
 L. Peter Deutsch <ghost@aladdin.com>
