--- a/gs/man/ps2ps.1
+++ b/gs/man/ps2ps.1
@@ -1,9 +1,11 @@
 .\" $RCSfile$ $Revision$
-.TH PS2PS 1 "2 December 2000" 6.50 "Ghostscript Tools" \" -*- nroff -*-
+.TH PS2PS 1 "8 April 2001" 7.00 "Ghostscript Tools" \" -*- nroff -*-
 .SH NAME
-ps2ps \- Ghostscript PostScript "distiller"
+ps2ps, eps2eps \- Ghostscript PostScript "distiller"
 .SH SYNOPSIS
 \fBps2ps\fR [ \fIoptions\fR ] \fIinput.ps output.ps\fR
+.br
+\fBeps2eps\fR [ \fIoptions\fR ] \fIinput.eps output.eps\fR
 .SH DESCRIPTION
 \fBps2ps\fR uses \fIgs\fR(1) to convert \fBPostScript\fR(tm) file
 "input.ps" to simpler and (usually) faster PostScript in
@@ -11,12 +13,12 @@ ps2ps \- Ghostscript PostScript "distiller"
 constructs, but the \fB\-dLanguageLevel=1\fR option restricts the output to
 Level 1.
 .PP
-Use \fBps2ps\fR only for ordinary PostScript (PS) files; for
-Encapsulated PostScript (EPS) files, use \fBeps2eps\fR.
+\fBeps2eps\fR performs the equivalent optimization for Encapsulated
+PostScript (EPS) files. 
 .SH FILES
 Run "\fBgs -h\fR" to find the location of Ghostscript documentation on your
 system, from which you can get more details.
 .SH VERSION
-This document was last revised for Ghostscript version 6.50.
+This document was last revised for Ghostscript version 7.00.
 .SH AUTHOR
 L. Peter Deutsch <ghost@aladdin.com>
