Freetype looks good.  Needs testing on previous versions of Freetype.
git-svn-id: http://svn.ghostscript.com/ghostpcl/trunk/ghostpcl@1508 06663e23-700e-0410-b217-a244a6096597

--- a/tools/TODO
+++ b/tools/TODO
@@ -10,7 +10,7 @@ o PCLXL 2.1. (henry, not started)
 o 80 resident pcl fonts using freetype scaler and Type 1 + TrueType
   font data. (henry, not started)
 o URW font character analysis. (henry, not started)
-o Microsoft Publishing symbol set 6J has incorrect entries plsymbol.c (stefan, not started)
+o Microsoft Publishing symbol set 6J has incorrect entries plsymbol.c (stefan, started)
 o Vertical glyph substitutions - see fts 242* panels. (henry, not started)
 
 Language switching
@@ -18,6 +18,10 @@ Language switching
 
 o Postscript job encapsulation for the language switching
   environment. (stefan, finished with known problems)
+o GL/2 labels with Freetype 2 are not always correct.  Problem should
+go away once a cache device is installed.  HPGL/2 tries to figure out
+its next position based on the "currentpoint" after rendering the
+character. (stefan, done, testing in progress, cache device may not be needed.)
 o Memory leak testing. (stefan, in progress)
 o Device switching testing. (henry, smoke tested)
 o Investigate Postscript font downloading persistence. (henry, not started).
@@ -27,10 +31,6 @@ Freetype 2 integration
 ======================
 
 o Needs a cache device. (henry, not started)
-o GL/2 labels with Freetype 2 are not always correct.  Problem should
-go away once a cache device is installed.  HPGL/2 tries to figure out
-its next position based on the "currentpoint" after rendering the
-character. (stefan, in progress)
 o left side bearing metric is always 0. (henry, not started)
 o galley characters unsupported.  (henry, not started)
 o downloaded truetypes don't work.  (henry, not started)
