Fixed Microsoft symbol set and changed project to verify all symbol sets.
git-svn-id: http://svn.ghostscript.com/ghostpcl/trunk/ghostpcl@1518 06663e23-700e-0410-b217-a244a6096597

--- a/tools/TODO
+++ b/tools/TODO
@@ -10,7 +10,8 @@ o PCLXL 2.1. (henry, not started)
 o 80 resident pcl fonts using freetype scaler and Type 1 + TrueType
   font data. (henry, not started)
 o URW font character analysis. (henry, not started)
-o Microsoft Publishing symbol set 6J has incorrect entries plsymbol.c (stefan, started)
+o Verify all symbol sets are correct for both afga and urw.  (stefan, started :
+	5T, 6J -- done)
 o Vertical glyph substitutions - see fts 242* panels. (henry, not started)
 
 Language switching
