We now decode the CVision Starr Report page embedded stream, once extracted from the pdf.
git-svn-id: http://svn.ghostscript.com/jbig2dec/trunk@128 ded80894-8fb9-0310-811b-c03f3676ab4d

--- a/CHANGES
+++ b/CHANGES
@@ -5,3 +5,4 @@ Version 0.1
  * decodes arithmetic symbol dictionaries
  * decodes artithmetic text regions
  * successfully decodes ubc test streams 042_1,2,4,5 and 10.
+ * successfully decodes CVision embedded bitstream str-p39
