mention reg testing in changelog
git-svn-id: http://svn.ghostscript.com/jbig2dec/trunk@155 ded80894-8fb9-0310-811b-c03f3676ab4d

--- a/CHANGES
+++ b/CHANGES
@@ -6,3 +6,5 @@ Version 0.1
  * decodes artithmetic text regions
  * successfully decodes ubc test streams 042_1,2,4,5 and 10.
  * successfully decodes CVision embedded bitstream str-p39
+ * regression testing harness based on SHA-1 hashes of known files
+
