--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
-Version 0.1
+Version 0.2 (not yet released)
+
+ * 
+
+Version 0.1 (released 2002 August 6)
 
  * decodes artithmetic and huffman-coded generic regions
     - some templates not working
