Makefile - debug target in top level makefile.
README - improves install notes.

pxl/pxgstate.c - The page scale operator did not support the new arguments
units of measure and measure resulting in several errors in the fts.
Our interpretation of the specification is slightly different than
HP's resulting in a visual discrepancy on t333.bin panel 01.

pxl/pxink.c - The 3.0 sethalftone method is incorrectly documented in
the 3.0 specification and consequently implemented incorrectly in our
interpreter.  Use of the new attributes pxaAllObjectTypes,
pxaTextObject, etc. is optional.  These parameters will not be
supported until the color pxl release is supported.  For now we use
the attributes expected on monochrome devices: pxaDitherOrigin,
pxaDeviceMatrix, pxaDitherMatrixDataType, pxaDitherMatrixSize,
pxaDitherMatrixDepth.  Also, removes diagnostic "TBD" notes.

git-svn-id: http://svn.ghostscript.com/ghostpcl/trunk/ghostpcl@1764 06663e23-700e-0410-b217-a244a6096597

--- a/README
+++ b/README
@@ -3,11 +3,15 @@ License is in Public.htm
 
 We encourage you to read the documentation and licence information but
 the software can be quickly built and installed on many unix systems
-by executing these commands.
+by executing these commands. (don't type '*')
 
-make
+make fonts *
+make pcl6 (make debug for a diagnostic system)
 make test
-make install
+make install *
+
+* may require administrator privelages depending on the permissions of
+  the install locations
 
 `make test' will run the pcl6 interpreter with the X11 device in
 interactive mode.  You must press return after each page is displayed.
