--- a/README
+++ b/README
@@ -19,6 +19,7 @@ A set of example files is available from
 http://www.ece.ubc.ca/spmg/jbig2/bitstreams/main.html
 
 More information about this project and updated versions are available
-from http://jbig2dec.sf.net/ 
+from http://jbig2dec.sf.net/ Development source code is kept in a 
+subversion repository at svn.ghostscript.com.
 
 The contact address for the project is <jbig2-dev@ghostscript.com>.
