Update changelog for release.
(recommitted after repository became corrupt. original change dated Wed Apr 16 18:13:29 2003)


git-svn-id: http://svn.ghostscript.com/jbig2dec/trunk@239 ded80894-8fb9-0310-811b-c03f3676ab4d

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
-Version 0.2 (not yet released)
+Version 0.2 (released 2003 April 17)
 
  * portability fixes
+ * support for metadata extension segments (latin-1 only)
+ * other bugfixes
 
 Version 0.1 (released 2002 August 6)
 
