--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-Version 0.3 (not yet released)
+Version 0.3 (released 2003 May 20)
 
  * win32 portability fixes related to ghostscript integration
  * generic mmr region support
