--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.4 (not yet released)
+
+ * no changes yet
+
 Version 0.3 (released 2003 May 20)
 
  * win32 portability fixes related to ghostscript integration
